# cgu

./: .gitignore  Cargo.toml  README.md
.github/workflows/: main.yml
src/: commands.rs  config.rs  gitconfig.rs  main.rs  utils.rs
