[package]
name = "cgu"
description = "ChangeGitUser - Manage you local git configurations from the CLI."
authors = ["Florian Straubinger"]
repository = "https://github.com/f-str/cgu"
readme = "README.md"
license-file = "LICENSE"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
dirs = "5.0.1"
edit = "0.1.5"
shellexpand="3.1.0"